--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
+    "@react-google-maps/api": "^2.19.3",
+    "hamburger-react": "^2.5.1",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-hook-form": "^7.52.0",
+    "react-input-mask": "^2.0.4",
+    "react-select": "^5.8.0",
+    "react-share": "^5.1.0",
+    "react-slick": "^0.30.2",
+    "sass": "^1.77.8",
+    "sharp": "^0.33.4",
+    "slick-carousel": "^1.8.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
