--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
     "@react-google-maps/api": "^2.19.3",
+    "@reduxjs/toolkit": "^2.2.7",
     "hamburger-react": "^2.5.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-input-mask": "^2.0.4",
+    "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
