--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-select": "^5.8.0",
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
     "sharp": "^0.33.4",
     "slick-carousel": "^1.8.1",
