--- a/package.json
+++ b/package.json
@@ -9,27 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/next-js": "^2.2.0",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.6.0",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.7",
-    "framer-motion": "^11.3.28",
     "hamburger-react": "^2.5.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.4.1",
     "react-input-mask": "^2.0.4",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
-    "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
-    "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
-    "sharp": "^0.33.4",
     "slick-carousel": "^1.8.1",
     "zod": "^3.23.8"
   },
