--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
+    "react-inner-image-zoom": "^3.0.2",
     "react-input-mask": "^2.0.4",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
