--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_DATA_API=https://goldcenter.new.itfabers.com/api/v2
+# NEXT_PUBLIC_DATA_API=https://goldcenter.new.itfabers.com/api/v2
+NEXT_PUBLIC_DATA_API=https://api.goldcentr.am/v1
+
