--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # NEXT_PUBLIC_DATA_API=https://goldcenter.new.itfabers.com/api/v2
 NEXT_PUBLIC_DATA_API=https://api.goldcentr.am/v1
+NEXT_PUBLIC_DATA_API2=https://api.goldcenter.am/v1
 
